--- a/.github/workflows/android_basic.yml
+++ b/.github/workflows/android_basic.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build --scan
     - name: Run unit tests
-      run: ./gradlew test --scan
+      run: ./gradlew test
     - name: Run checks
       run: ./gradlew check
